--- a/angular-m-cli/index.html
+++ b/angular-m-cli/index.html
@@ -5,6 +5,7 @@
   <title>ANGULAR-M-CLI</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="A starter project for Jekyll">
+  <meta name="referrer" content="no-referrer">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <!-- <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/buble.css"> -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css">
