--- a/xui-example/pages/index.html
+++ b/xui-example/pages/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>home</title>
+		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 		<style>
 			@font-face
 			{
