--- a/vue-app-cli/index.html
+++ b/vue-app-cli/index.html
@@ -7,6 +7,11 @@
   <meta name="description" content="A starter project for Jekyll">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
+  <style>
+    img {
+      -webkit-user-drag: none;
+    }
+  </style>
 </head>
 <body>
   <div id="app"></div>
